Fix low contrast text ratio on facebook link

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -266,6 +266,10 @@ body {
     cursor: pointer;
 }
 
+.facebook-text {
+    color: #1565c0 !important;
+}
+
 /* ------------------------------- Footer */
 
 footer {
